--- a/01-utility-first/index.html
+++ b/01-utility-first/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <div
-      class="flex items-center p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg space-x-4"
+      class="flex my-10 items-center p-6 max-w-sm mx-auto bg-white rounded-xl shadow-lg space-x-4"
     >
       <div>
         <img class="h-12 w-12" src="../assets/img/warning.svg" alt="alert" />
@@ -64,6 +64,15 @@
       <div>
         <div class="text-xl font-medium text-black">Are You Sure?</div>
         <p class="text-slate-500">You are about to delete a post</p>
+      </div>
+    </div>
+
+    <!-- My changes -->
+    <div class="flex max-w-[400px] my-12 mx-auto px-6 h-20 bg-blue-50 items-center rounded-xl shadow-xl">
+      <img src="../assets/img/warning.svg" alt="image" class="h-14 flex-shrink-0">
+      <div class="ml-6">
+        <h1 class="font-semibold text-[20px]">Are You Sure?</h1>
+        <div class="text-gray-500">You are about to delete a post</div>      
       </div>
     </div>
   </body>
