Colors - bg&shadow, border&underline, checkbox

--- a/02-colors/index.html
+++ b/02-colors/index.html
@@ -19,7 +19,7 @@
     <p class="text-red-300">Tailwind is awesome</p>
     <p class="text-red-400">Tailwind is awesome</p>
     <p class="text-red-500">Tailwind is awesome</p>
-    <p class="text-red-600">Tailwind is awesome</p>
+    <p class="text-red-600">Tailwind is awesome 600</p>
     <p class="text-red-700">Tailwind is awesome</p>
     <p class="text-red-800">Tailwind is awesome</p>
     <p class="text-red-900">Tailwind is awesome</p>
@@ -77,5 +77,58 @@
     <div class="bg-[#427fab] h-10">Hello</div>
     <div class="text-[#427fab] h-10">Hello</div>
     <div class="border border-[#427fab] h-10">Hello</div>
+    <br />
+    <!-- Starts My code -->
+    <h1 class="text-5xl font-bold my-8 bg-black text-white">My changes</h1>
+
+    <h1 class="text-xl font-semibold">Text colors</h1>
+
+    <h1 class="text-black">This is black color</h1>
+    <p class="text-white bg-blue-800">This is white text</p>
+    <p class="text-blue-600">This is blue text</p>
+    <p class="text-red-700">This is red text</p>
+    <br />
+
+    <h1 class="text-xl font-bold bg-black text-white">Background Colors</h1>
+    <p class="bg-red-600 text-yellow-300 font-semibold">
+      This is red background
+    </p>
+    <br />
+
+    <h1 class="text-xl font-semibold shadow-xl shadow-blue-300 bg-blue-400 text-white">Shadows</h1>
+
+    <br />
+
+    <h1 class="text-xl font-semibold">Underlined colors</h1>
+    <p class="underline text-red-600 decoration-double docoration-8">
+      Red underlined double styled
+    </p>
+    <span class="underline decoration-dotted text-blue-600 underline-offset-2"
+      >dotted style with offset</span
+    >
+    <div
+      class="underline text-green-500 decoration-1 decoration-wavy underline-offset-4"
+    >
+      wavy underlined with thick width and offset
+    </div>
+    <br /><br />
+
+    <h1 class="text-xl font-semibold">Border colors</h1>
+    <input type="text" class="border-2 border-red-500 mb-2" /><br />
+    <span class="border-4 border-blue-500 text-red-500"
+      >Text comes with border</span
+    >
+    <div class="border-dotted border-green-600 border-2 rounded-3xl mt-2">
+      border with style,color,width and rounded
+    </div>
+    <br />
+
+    <!-- <h1 class="text-xl font-semibold">divide colors</h1> -->
+
+    <h1 class="text-xl font-semibold underline docoration-dotted decoration-4 text-violet-600">checkbox colors</h1>
+    <input type="checkbox" class="accent-blue-500" name="checkbox" checked> checkbox
+
+
+    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
   </body>
 </html>
