--- a/03-container-spacing/index.html
+++ b/03-container-spacing/index.html
@@ -57,6 +57,16 @@
         <div class="p-3 bg-red-100">03</div>
       </div>
     </div>
+
+    <h1 class="text-xl font-bold bg-blue-600 text-white mt-10 mb-4">My changes</h1>
+    <div class="flex space-x-4">
+      <div class="bg-yellow-100 border-2 rounded-md border-red-600">1 This is well spaced, no extra space on left</div>
+      <div class="bg-yellow-100 border-2 rounded-md border-red-600">2 This is well spaced</div>
+      <div class="bg-yellow-100 border-2 rounded-md border-red-600">3 This is well spaced</div>
+      <div class="bg-yellow-100 border-2 rounded-md border-red-600">4 This is well spaced, no extra space on right</div>
+    </div>
+
+    <br /><br /><br /><br /><br /><br /><br /><br />
   </body>
 </html>
 
