--- a/05-sizing/index.html
+++ b/05-sizing/index.html
@@ -89,6 +89,12 @@
 
     <!-- Full screen height -->
     <div class="h-screen bg-blue-300">Hello</div>
+
+    <h1 class="text-xl font-bold mt-12 mb-4">My changes</h1>
+    <div class="w-12 border-2 border-red-500">widht of 3rem</div>
+    div.
+
+    <br /><br /><br /><br /><br /><br /><br /><br />
   </body>
 </html>
 
