added divides  and some more

--- a/02-colors/index.html
+++ b/02-colors/index.html
@@ -95,7 +95,11 @@
     </p>
     <br />
 
-    <h1 class="text-xl font-semibold shadow-xl shadow-blue-300 bg-blue-400 text-white">Shadows</h1>
+    <h1
+      class="text-xl font-semibold shadow-xl shadow-blue-300 bg-blue-400 text-white"
+    >
+      Shadows
+    </h1>
 
     <br />
 
@@ -125,8 +129,58 @@
 
     <!-- <h1 class="text-xl font-semibold">divide colors</h1> -->
 
-    <h1 class="text-xl font-semibold underline docoration-dotted decoration-4 text-violet-600">checkbox colors</h1>
-    <input type="checkbox" class="accent-blue-500" name="checkbox" checked> checkbox
+    <h1
+      class="text-xl font-semibold underline docoration-dotted decoration-4 text-violet-600"
+    >
+      checkbox colors
+    </h1>
+    <input type="checkbox" class="accent-blue-500" name="checkbox" checked />
+    checkbox
+
+    <br /><br />
+    <hr />
+    <br />
+    <h1
+      class="text-3xl text-semibold bg-black text-white my-2 underline underline-offset-0 decoration-dotted"
+    >
+      Sunday changes
+    </h1>
+    <h1 class="text-black text-xl">Tailwind is awesome</h1>
+    <h1 class="text-red-100 text-xl">red-faded</h1>
+    <h1 class="text-red-200 text-xl">red-faded</h1>
+    <h1 class="text-red-500 text-xl">red-500</h1>
+    <h1 class="text-red-600 text-xl">red-600</h1>
+
+    <div class="bg-slate-600 text-white">Background is slated</div>
+    <div class="bg-slate-500 text-white">zinc background</div>
+    <div class="bg-zinc-800 text-white">slated background</div>
+    <div class="bg-gray-500 text-white">slated background</div>
+    <br />
+    <div class="text-lg underline text-red-500">awesome tailwind</div>
+    <br />
+    <h1 class="text-lg font-semibold bg-blue-600 text-white my-2">
+      Borders around input
+    </h1>
+    <input type="text" class="border border-red-400 w-40" />
+    <input type="text" class="w-40 border-4 border-dotted border-green-600" />
+    <br />
+    <h1 class="text-lg font-semibold bg-red-600 text-white my-2">Dividers</h1>
+    <div class="divide-y m-4 divide-green-500">
+      <div>item1</div>
+      <div>item2</div>
+      <div>item3</div>
+      <div>item4</div>
+    </div>
+
+    <div class="divide-x-4 divide-blue-500"><span>item1</span><span>item2</span><span>item3</span></div>
+
+    <h1 class="text-lg font-semibold bg-green-600 text-white mt-4 mb-1">shadows</h1>
+    <div class="bg-cyan-500 shadow-lg shadow-cyan-300 text-white">subscribe here</div>
+
+    <h1 class="text-lg font-semibold bg-black text-white mt-6">Checkmark accent colors</h1>
+    <input type="checkbox" name="" id="" class="accent-blue-500" checked>
+    <input type="checkbox" name="" id="" class="accent-red-500" checked>
+    <input type="checkbox" name="" id="" class="accent-green-600" checked>
 
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
