Added full width and screen width

--- a/05-sizing/index.html
+++ b/05-sizing/index.html
@@ -92,8 +92,20 @@
 
     <h1 class="text-xl font-bold mt-12 mb-4">My changes</h1>
     <div class="w-12 border-2 border-red-500">widht of 3rem</div>
-    div.
-
+    
+    <h1 class="text-lg font-semibold text-white bg-black my-4">view_port widths</h1>
+    <div class="w-1/2 bg-green-600 text-white my-2">width 1</div>
+    <div class="w-2/3 bg-green-600 text-white my-2">width 1</div>
+    <div class="w-3/4 bg-green-600 text-white my-2">width 1</div>
+    <div class="w-2/4 bg-green-600 text-white my-2">width 1</div>
+    <div class="w-2/5 bg-green-600 text-white my-2">width 1</div>
+    <div class="w-5/6 bg-green-600 text-white my-2">width 1</div>
+    <div class="w-4/7 bg-green-600 text-white my-2">width 1</div>
+    <div class="w-screen border-2 border-blue-400">border upto screen</div>
+    <div class="w-full border-2 border-red-300 mt-3">border is full</div>
+    <div class="w-1/2">
+      <div class="w-full border-2 border-red-300 mt-3">border is full but half of container's width</div>
+    </div>
     <br /><br /><br /><br /><br /><br /><br /><br />
   </body>
 </html>
