borders new changes

--- a/08-borders/index.html
+++ b/08-borders/index.html
@@ -62,7 +62,7 @@
 
     <!-- Border Radius -->
     <div class="w-96 m-3 p-5 bg-gray-300 rounded">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Id consequuntur
+      Lrem ipsum dolor sit amet consectetur adipisicing elit. Id consequuntur
       reiciendis odio eaque vitae nostrum sunt tempora deleniti repellendus
       dolores.
     </div>
@@ -108,6 +108,17 @@
     <button class="outline outline-offset-2 outline-1">Button 1</button>
     <button class="outline outline-offset-2 outline-2">Button 2</button>
     <button class="outline outline-offset-2 outline-4">Button 3</button>
+
+    <h1 class="text-lg font-semibold bg-black text-white mt-6 mb-2">
+      My changes
+    </h1>
+    <p class="border-t border-t-blue-400 border-r border-r-green-600">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Id consequuntur reiciendis odio eaque vitae nostrum sunt tempora deleniti repellendus dolores
+    </p>
+    <p class="border-x border-x-blue-400 border-y border-y-green-600 rounded-tl-2xl rounded-b-3xl">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Id consequuntur reiciendis odio eaque vitae nostrum sunt tempora deleniti repellendus dolores
+    </p>
+    <br /><br /><br /><br /><br /><br />
   </body>
 </html>
 
