--- a/07-backgrounds-shadows/index.html
+++ b/07-backgrounds-shadows/index.html
@@ -12,7 +12,11 @@
     <div
       class="h-64 w-72 bg-blue-500 bg-cover bg-no-repeat bg-center"
       style="background-image: url('../assets/img/img1.jpg')"
-    ></div>
+    >a</div>
+    <div
+      class="h-64 w-72 bg-blue-500 bg-cover bg-no-repeat bg-center"
+      style="background-image: url('../assets/img/img1.jpg')"
+    >a</div>
 
     <!-- Gradients -->
     <div class="h-24 bg-gradient-to-r from-cyan-500 to-blue-500"></div>
@@ -62,6 +66,9 @@
         deleniti iusto delectus alias natus quam dolor explicabo quas eius!
       </div>
     </div>
+    <br /><br /><br />
+    <div class="m-8 bg-yellow-500">hi hello</div>
+    <br /><br /><br /><br /><br /><br />
   </body>
 </html>
 
