added filter changes

--- a/09-filters/index.html
+++ b/09-filters/index.html
@@ -27,31 +27,48 @@
     </div>
 
     <!-- Brightness -->
-    <div class="brightness-50">
-      <img class="w-48" src="/assets/img/img2.jpg" alt="" />
+    <div class="flex flex-wrap space-x-1">
+      <div class="brightness-50">
+        50
+        <img class="w-48" src="/assets/img/img2.jpg" alt="" />
+      </div>
+      <div class="brightness-100">
+        100
+        <img class="w-48" src="/assets/img/img2.jpg" alt="" />
+      </div>
+      <div class="">
+        default
+        <img class="w-48" src="/assets/img/img2.jpg" alt="" />
+      </div>
+      <div class="brightness-150">
+        150
+        <img class="w-48" src="/assets/img/img2.jpg" alt="" />
+      </div>
+      <div class="brightness-200">
+        200
+        <img class="w-48" src="/assets/img/img2.jpg" alt="" />
+      </div>
     </div>
-    <div class="brightness-100">
-      <img class="w-48" src="/assets/img/img2.jpg" alt="" />
-    </div>
-    <div class="brightness-150">
-      <img class="w-48" src="/assets/img/img2.jpg" alt="" />
-    </div>
-    <div class="brightness-200">
-      <img class="w-48" src="/assets/img/img2.jpg" alt="" />
-    </div>
+    <br />
 
     <!-- Contrast -->
-    <div class="contrast-50">
-      <img class="w-48" src="/assets/img/img2.jpg" alt="" />
-    </div>
-    <div class="contrast-100">
-      <img class="w-48" src="/assets/img/img2.jpg" alt="" />
-    </div>
-    <div class="contrast-150">
-      <img class="w-48" src="/assets/img/img2.jpg" alt="" />
-    </div>
-    <div class="contrast-200">
-      <img class="w-48" src="/assets/img/img2.jpg" alt="" />
+    <div class="flex flex-wrap">
+      <div class="contrast-50">
+        50
+        <img class="w-48" src="/assets/img/img2.jpg" alt="" />
+      </div>
+      <div class="contrast-100">
+        100
+        <img class="w-48" src="/assets/img/img2.jpg" alt="" />
+      </div>
+      <div class="contrast-150">
+        150
+        <img class="w-48" src="/assets/img/img2.jpg" alt="" />
+      </div>
+      <div class="contrast-200 brightness-200">
+        200
+        <img class="w-48" src="/assets/img/img2.jpg" alt="" />
+      </div>
     </div>
 
     <!-- Grayscale -->
@@ -60,8 +77,18 @@
     </div>
 
     <!-- Invert -->
-    <div class="invert">
-      <img class="w-48" src="/assets/img/img3.jpg" alt="" />
+    <div class="flex">
+      <div class="">
+        Original text is black <br />
+        <img class="w-48" src="/assets/img/img3.jpg" alt="" />
+      </div>
+      <div class="invert">
+        <span class="text-red-600"
+          >Invert red color to blue. 
+          Invert changes only colors</span
+        >
+        <img class="w-48" src="/assets/img/img3.jpg" alt="" />
+      </div>
     </div>
 
     <!-- Sepia -->
